projects/compiler/test/lexer/symbols_error_hash_other.out
Error at %FILE_NAME%:1:2
Unexpected character '+':
  |  #+
      ^